plotly with fig2html

--- a/_notebooks/2021-04-20-test14.ipynb
+++ b/_notebooks/2021-04-20-test14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f1bd61e",
+   "id": "dcd7e0ce",
    "metadata": {},
    "source": [
     "<p style=\"coloe:darkred; font-family:Futura; font-size:50px; text-align:center\">WaiDatathon 2021: \"Combat domestic violence with data and AI\"</p>   "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dcc4ce6",
+   "id": "16668926",
    "metadata": {},
    "source": [
     "# Content\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53707bca",
+   "id": "1a3e6c38",
    "metadata": {},
    "source": [
     "<a id=\"prob\"></a>\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e582125",
+   "id": "8a952262",
    "metadata": {},
    "source": [
     "<a id=\"prob\"></a>\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91857553",
+   "id": "148a2d8b",
    "metadata": {},
    "source": [
     "<a id=\"setup\"></a>\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "71ceeb94",
+   "id": "2ba152cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9a1ca32",
+   "id": "7dbc4c01",
    "metadata": {},
    "source": [
     "<a id=\"acc_vs_exp\"></a>\n",
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "757b8b5b",
+   "id": "b6bf5197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f9dba43",
+   "id": "965e4898",
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1502,9 @@
     "temp = df[y_list].copy().rename(dict(zip(y_list,[\"Men\", \"Women\"])),axis=1)\n",
     "fig = px.violin(temp,box=True,title=x)\n",
     "# fig.update_layout(title=dict(x=0.5,font=dict(family='Futura')))\n",
-    "fig.show()"
+    "# fig.show()\n",
+    "from IPython.display import HTML\n",
+    "HTML(fig.to_html())"
    ]
   }
  ],
