fixed missing first cell

--- a/_notebooks/2021_05_11_superpixel.ipynb
+++ b/_notebooks/2021_05_11_superpixel.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb9b8bdb",
+   "id": "106acb9b",
    "metadata": {},
    "source": [
-    "# Superpixels\n",
-    "\n",
+    "# Superpixels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65612d91",
+   "metadata": {},
+   "source": [
     "A typical image may contain millions of pixels, which makes operation on images and computer vision in general pretty expensive computationally. However, most of the image is actually composed of relatively large regions of similar color. Thus, if we can identify these regions we can efficiently reduce the size of the image while keeping most of the relevant information, i.e. color and edges. Enter superpixels. \"Superpixels group pixels similar in color and other low-level properties\" ([Stutz et al.](https://arxiv.org/pdf/1612.01601.pdf)). They can be used to improve the computational efficiency for problems such as image segmentation, tracking, or 3-D reconstruction.\n",
     "\n",
     "According to Stutz et al., superpixels must have the following properties: \"\n",
@@ -24,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4a0b0d",
+   "id": "b614c761",
    "metadata": {},
    "source": [
     "# Setup\n",
@@ -35,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "23533824",
+   "id": "fe61e1bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c616e66",
+   "id": "3b71503e",
    "metadata": {},
    "source": [
     "Then, we import an image and we compute a SLIC segmentation using the skimage implementation for reference. Here, we used a compactness of 20 and 100 superpixels. We reconstruct an image for the segmentation using skimage's `label2rgb` function."
@@ -62,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "399a503e",
+   "id": "64424ccb",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a826d657",
+   "id": "307848e4",
    "metadata": {},
    "source": [
     "# Our method\n",
@@ -134,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9765b75b",
+   "id": "3ac469c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76e504c4",
+   "id": "97339399",
    "metadata": {},
    "source": [
     "# Results"
@@ -235,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "71327b09",
+   "id": "b293b30c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "311780bb",
+   "id": "a187806d",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79978739",
+   "id": "ef4bc56d",
    "metadata": {},
    "source": [
     "# Visualizations\n",
@@ -289,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7da2a8b8",
+   "id": "8ef22754",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "709ffcae",
+   "id": "c3f0332d",
    "metadata": {},
    "source": [
     "## Blending the original, segmented and contoured images\n",
@@ -340,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f527c22d",
+   "id": "8f8ba91f",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efa5a47",
+   "id": "0b854fa0",
    "metadata": {},
    "source": [
     "Finally, we gradually blend the original, segmented and countoured image together."
@@ -373,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8c5ad76d",
+   "id": "15d817e5",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0e2db3a",
+   "id": "dc115ed7",
    "metadata": {},
    "source": [
     "# Conclusion\n",
