superpixel: small adjustement to the text

--- a/_notebooks/2021_05_11_superpixel.ipynb
+++ b/_notebooks/2021_05_11_superpixel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53fbcd1b",
+   "id": "767c071e",
    "metadata": {},
    "source": [
     "# Superpixels"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd35b2f",
+   "id": "dd7be56a",
    "metadata": {},
    "source": [
     "A typical image may contain millions of pixels, which makes operation on images and computer vision in general pretty expensive computationally. However, most of the image is actually composed of relatively large regions of similar color. Thus, if we can identify these regions we can efficiently reduce the size of the image while keeping most of the relevant information, i.e. color and edges. Enter superpixels. \"Superpixels group pixels similar in color and other low-level properties\" ([Stutz et al.](https://arxiv.org/pdf/1612.01601.pdf)). They can be used to improve the computational efficiency for problems such as image segmentation, tracking, or 3-D reconstruction.\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ce8e0d",
+   "id": "40b52f22",
    "metadata": {},
    "source": [
     "# Setup\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a512b39",
+   "id": "ff3dfc4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b06cbc",
+   "id": "a6434410",
    "metadata": {},
    "source": [
     "Then, we import an image and we compute a SLIC segmentation using the skimage implementation for reference. Here, we used a compactness of 20 and 100 superpixels. We reconstruct an image for the segmentation using skimage's `label2rgb` function."
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5fc290e3",
+   "id": "449c2e2d",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f39587e",
+   "id": "b6187949",
    "metadata": {},
    "source": [
     "# Our method\n",
@@ -141,12 +141,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5eeaf7b2",
+   "id": "815bf0f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def segment_image(image, K=100, W=3.0, sigma=2.0, enforce_connectivity=True, output_type='image'):\n",
-    "    \"\"\" Segments an image using K-Means clustering\n",
+    "    \"\"\"Segments an image into superpixels by using K-Means clustering and connectivity enforcement\n",
     "    \n",
     "Parameters\n",
     "----------\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed69379e",
+   "id": "dedcd164",
    "metadata": {},
    "source": [
     "# Results\n",
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ef530fd3",
+   "id": "73c89fe7",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddeefce1",
+   "id": "750cb14d",
    "metadata": {},
    "source": [
     "# Visualizations\n",
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "11fd199a",
+   "id": "b3314444",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2203e698",
+   "id": "d05c71f5",
    "metadata": {},
    "source": [
     "## Blending the original, segmented and contoured images\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3eb1e5cd",
+   "id": "fa751c75",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6a332b",
+   "id": "e6dfc563",
    "metadata": {},
    "source": [
     "Finally, we gradually blend (i.e. crossfade) the original, segmented and countoured image together."
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9cd5be51",
+   "id": "44dd912d",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe31f3e",
+   "id": "19522d66",
    "metadata": {},
    "source": [
     "# Conclusion\n",
