changed the title to pytorch post

--- a/_notebooks/2021-05-19-PyTorch-gradient.ipynb
+++ b/_notebooks/2021-05-19-PyTorch-gradient.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "99ec9232",
+   "id": "ce8cc28a",
    "metadata": {},
    "source": [
-    "# A simple example of automatic gradient computation in PyTorch\n",
+    "# An introduction to automatic differentiation with PyTorch: computing a gradient field\n",
     "\n",
     "The key algorithm of neural networks is back-propagation which applies the chain rule to compute derivatives of a function. In PyTorch, assuming you have defined a function, say `f = sin(x)`, you would compute its gradient by calling `f.backward()` followed by `x.grad`. The gradient is a function but `x.grad` returns values, so it was not immediately obvious to me what was happening. \n",
     "\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1dd11bc7",
+   "id": "31481919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4fabd1",
+   "id": "bb2759e7",
    "metadata": {},
    "source": [
     "# Function of one variable\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "74c39fb1",
+   "id": "45c08de2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4ba73d7",
+   "id": "8558454a",
    "metadata": {},
    "source": [
     "Now we visualize the function (red line) and its gradient (black arrows). The gradient is computed by calling `X.grad`."
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bced04dc",
+   "id": "d36af53b",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed39171",
+   "id": "487b760f",
    "metadata": {},
    "source": [
     "# Function of two variables\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9676d1e",
+   "id": "c3821bcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0177fa9a",
+   "id": "a66e15ec",
    "metadata": {},
    "source": [
     "In two dimensions the gradient is a vector field that can be represented using a quiverplot. The scalar function $f$ is represented as a heatmap. We calculate the components of the gradient vector at each of locations stored in `(X,Y)` by calling `X.grad` and `Y.grad`."
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1b6a7d17",
+   "id": "79b59138",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3695d499",
+   "id": "ba5b4f18",
    "metadata": {},
    "source": [
     "# Conclusion\n",
