fixed the title (":" always causes a bug)

--- a/_notebooks/2021-05-19-PyTorch-gradient.ipynb
+++ b/_notebooks/2021-05-19-PyTorch-gradient.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce8cc28a",
+   "id": "4f5f6748",
    "metadata": {},
    "source": [
-    "# An introduction to automatic differentiation with PyTorch: computing a gradient field\n",
+    "# An introduction to automatic differentiation with PyTorch - computing a gradient field\n",
     "\n",
     "The key algorithm of neural networks is back-propagation which applies the chain rule to compute derivatives of a function. In PyTorch, assuming you have defined a function, say `f = sin(x)`, you would compute its gradient by calling `f.backward()` followed by `x.grad`. The gradient is a function but `x.grad` returns values, so it was not immediately obvious to me what was happening. \n",
     "\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "31481919",
+   "id": "30f87e03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb2759e7",
+   "id": "8d8e818a",
    "metadata": {},
    "source": [
     "# Function of one variable\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "45c08de2",
+   "id": "31f4dba4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8558454a",
+   "id": "693aad2d",
    "metadata": {},
    "source": [
     "Now we visualize the function (red line) and its gradient (black arrows). The gradient is computed by calling `X.grad`."
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d36af53b",
+   "id": "83f38850",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "487b760f",
+   "id": "e0f98882",
    "metadata": {},
    "source": [
     "# Function of two variables\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c3821bcd",
+   "id": "d9e16d17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a66e15ec",
+   "id": "4da16061",
    "metadata": {},
    "source": [
     "In two dimensions the gradient is a vector field that can be represented using a quiverplot. The scalar function $f$ is represented as a heatmap. We calculate the components of the gradient vector at each of locations stored in `(X,Y)` by calling `X.grad` and `Y.grad`."
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "79b59138",
+   "id": "288c10b3",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba5b4f18",
+   "id": "c5a68156",
    "metadata": {},
    "source": [
     "# Conclusion\n",
