--- a/_notebooks/2021-05-19-PyTorch-gradient.ipynb
+++ b/_notebooks/2021-05-19-PyTorch-gradient.ipynb
@@ -2,11 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f5f6748",
+   "id": "8b7a86b0",
    "metadata": {},
    "source": [
-    "# An introduction to automatic differentiation with PyTorch - computing a gradient field\n",
+    "# x.grad demystified\n",
     "\n",
+    "> \"An introduction to automatic differentiation with PyTorch and computing a gradient field\"\n",
+    "\n",
+    "- toc: false\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [neural networks]\n",
+    "- image: images/some_folder/your_image.png\n",
+    "- hide: false\n",
+    "- search_exclude: true\n",
+    "- metadata_key1: metadata_value1\n",
+    "- metadata_key2: metadata_value2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41de355e",
+   "metadata": {},
+   "source": [
     "The key algorithm of neural networks is back-propagation which applies the chain rule to compute derivatives of a function. In PyTorch, assuming you have defined a function, say `f = sin(x)`, you would compute its gradient by calling `f.backward()` followed by `x.grad`. The gradient is a function but `x.grad` returns values, so it was not immediately obvious to me what was happening. \n",
     "\n",
     "To remind you, the gradient of scalar function $f(x,y,z)$ is a vector field defined by:\n",
@@ -35,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "30f87e03",
+   "id": "16bc0fe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8e818a",
+   "id": "0e451b51",
    "metadata": {},
    "source": [
     "# Function of one variable\n",
@@ -60,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "31f4dba4",
+   "id": "4232bc8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "693aad2d",
+   "id": "5608a6c7",
    "metadata": {},
    "source": [
     "Now we visualize the function (red line) and its gradient (black arrows). The gradient is computed by calling `X.grad`."
@@ -81,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "83f38850",
+   "id": "bd82d428",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0f98882",
+   "id": "b9bcd574",
    "metadata": {},
    "source": [
     "# Function of two variables\n",
@@ -121,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9e16d17",
+   "id": "4c0d63ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da16061",
+   "id": "8fc0226f",
    "metadata": {},
    "source": [
     "In two dimensions the gradient is a vector field that can be represented using a quiverplot. The scalar function $f$ is represented as a heatmap. We calculate the components of the gradient vector at each of locations stored in `(X,Y)` by calling `X.grad` and `Y.grad`."
@@ -145,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "288c10b3",
+   "id": "4b0b2d8e",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a68156",
+   "id": "8c50d5d4",
    "metadata": {},
    "source": [
     "# Conclusion\n",
