attemp to fix equations

--- a/_notebooks/2021-05-19-PyTorch-gradient.ipynb
+++ b/_notebooks/2021-05-19-PyTorch-gradient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0dd08de9",
+   "id": "8019f2b6",
    "metadata": {},
    "source": [
     "# x.grad demystified\n",
@@ -23,28 +23,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c18c3018",
+   "id": "d0418b17",
    "metadata": {},
    "source": [
     "The key algorithm of neural networks is back-propagation which applies the chain rule to compute derivatives of a function. In PyTorch, assuming you have defined a function, say `f = sin(x)`, you would compute its gradient by calling `f.backward()` followed by `x.grad`. The gradient is a function but `x.grad` returns values, so it was not immediately obvious to me what was happening. \n",
     "\n",
     "To remind you, the gradient of scalar function $f(x,y,z)$ is a vector field defined by:\n",
-    "$\\begin{align}\n",
-    "    \\nabla f &= \\begin{bmatrix}\n",
-    "           \\frac{d f}{d x} \\\\\n",
-    "           \\frac{d f}{d y} \\\\\n",
-    "           \\frac{d f}{d z} \\\\\n",
+    "$\n",
+    "    \\nabla f = \\begin{bmatrix}\n",
+    "           \\frac{d f}{d x}\n",
+    "           \\frac{d f}{d y}\n",
+    "           \\frac{d f}{d z}\n",
     "         \\end{bmatrix}\n",
-    "  \\end{align}$\n",
+    "$\n",
     "  \n",
     "You can sample this vector field at a given position say $(X,Y,Z)$.\n",
-    "$\\begin{align}\n",
+    "$\n",
     "    \\nabla f(X,Y,Z) &= \\begin{bmatrix}\n",
     "           \\frac{d f(X,Y,Z)}{d x} \\\\\n",
     "           \\frac{d f(X,Y,Z)}{d y} \\\\\n",
     "           \\frac{d f(X,Y,Z)}{d z} \\\\\n",
     "         \\end{bmatrix}\n",
-    "  \\end{align}$\n",
+    "$\n",
     "\n",
     "It turns out that calling `f.backward()` computes the function $\\nabla f$. When calling `x.grad`, PyTorch treats the tensor `x` as the axis $x$ and its values as the positions $X$. Thus, `x.grad` returns $\\frac{d f(X,Y,Z)}{d x}$.\n",
     "\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cfb060e0",
+   "id": "62b06344",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7724dd3",
+   "id": "33fe4081",
    "metadata": {},
    "source": [
     "# Function of one variable\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c267b3a",
+   "id": "b0474bb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86760e82",
+   "id": "92a2ff50",
    "metadata": {},
    "source": [
     "Now we visualize the function (red line) and its gradient (black arrows). The gradient is computed by calling `X.grad`."
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "beb9d670",
+   "id": "9a7094b7",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c166fb",
+   "id": "5c5c4066",
    "metadata": {},
    "source": [
     "# Function of two variables\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d61353b1",
+   "id": "8581f7ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c528e9a",
+   "id": "2a72ac51",
    "metadata": {},
    "source": [
     "In two dimensions the gradient is a vector field that can be represented using a quiverplot. The scalar function $f$ is represented as a heatmap. We calculate the components of the gradient vector at each of locations stored in `(X,Y)` by calling `X.grad` and `Y.grad`."
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a0ceddd2",
+   "id": "62a3a908",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41fbe424",
+   "id": "2f11eaef",
    "metadata": {},
    "source": [
     "# Conclusion\n",
