--- a/_notebooks/2021-05-19-PyTorch-gradient.ipynb
+++ b/_notebooks/2021-05-19-PyTorch-gradient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8019f2b6",
+   "id": "ee87b6c5",
    "metadata": {},
    "source": [
     "# x.grad demystified\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0418b17",
+   "id": "111d0d7b",
    "metadata": {},
    "source": [
     "The key algorithm of neural networks is back-propagation which applies the chain rule to compute derivatives of a function. In PyTorch, assuming you have defined a function, say `f = sin(x)`, you would compute its gradient by calling `f.backward()` followed by `x.grad`. The gradient is a function but `x.grad` returns values, so it was not immediately obvious to me what was happening. \n",
@@ -31,15 +31,15 @@
     "To remind you, the gradient of scalar function $f(x,y,z)$ is a vector field defined by:\n",
     "$\n",
     "    \\nabla f = \\begin{bmatrix}\n",
-    "           \\frac{d f}{d x}\n",
-    "           \\frac{d f}{d y}\n",
-    "           \\frac{d f}{d z}\n",
+    "           \\frac{d f}{d x} \\\\\n",
+    "           \\frac{d f}{d y} \\\\\n",
+    "           \\frac{d f}{d z} \\\\\n",
     "         \\end{bmatrix}\n",
     "$\n",
     "  \n",
     "You can sample this vector field at a given position say $(X,Y,Z)$.\n",
     "$\n",
-    "    \\nabla f(X,Y,Z) &= \\begin{bmatrix}\n",
+    "    \\nabla f(X,Y,Z) = \\begin{bmatrix}\n",
     "           \\frac{d f(X,Y,Z)}{d x} \\\\\n",
     "           \\frac{d f(X,Y,Z)}{d y} \\\\\n",
     "           \\frac{d f(X,Y,Z)}{d z} \\\\\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "62b06344",
+   "id": "7b3f150d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33fe4081",
+   "id": "2bd113ef",
    "metadata": {},
    "source": [
     "# Function of one variable\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b0474bb9",
+   "id": "61dde627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92a2ff50",
+   "id": "cef979de",
    "metadata": {},
    "source": [
     "Now we visualize the function (red line) and its gradient (black arrows). The gradient is computed by calling `X.grad`."
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9a7094b7",
+   "id": "0f03caf7",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5c4066",
+   "id": "a9fd4544",
    "metadata": {},
    "source": [
     "# Function of two variables\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8581f7ed",
+   "id": "acd63c76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a72ac51",
+   "id": "eea2e0e7",
    "metadata": {},
    "source": [
     "In two dimensions the gradient is a vector field that can be represented using a quiverplot. The scalar function $f$ is represented as a heatmap. We calculate the components of the gradient vector at each of locations stored in `(X,Y)` by calling `X.grad` and `Y.grad`."
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "62a3a908",
+   "id": "040a4f20",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f11eaef",
+   "id": "a20553ca",
    "metadata": {},
    "source": [
     "# Conclusion\n",
