fixing image in webcam capture post

--- a/_notebooks/2021-07-15-webcam-capture.ipynb
+++ b/_notebooks/2021-07-15-webcam-capture.ipynb
@@ -13,7 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter, OpenCV, computer-vision]\n",
-    "- image: images/some_folder/your_image.png\n",
+    "- image: images/2021_07_15_webcam_capture/webcam_shot.png\n",
     "- hide: false\n",
     "- search_exclude: true\n",
     "- metadata_key1: metadata_value1\n",
@@ -149,9 +149,17 @@
    "id": "14b3c5d8-ee28-488e-a4ec-022626d60358",
    "metadata": {},
    "source": [
-    "![webcam capture](webcam_shot.png)\n",
-    "hmmmm.... What an insightful blogpost"
+    "<!-- ![webcam capture](../images/2021_07_15_webcam_capture/webcam_shot.png \"hmmmm.... What an insightful blogpost\") -->\n",
+    "<img alt=\"webcam capture\" width=\"700\" caption=\"hmmmm.... What an insightful blogpost\" src=\"../images/2021_07_15_webcam_capture/webcam_shot.png\" />"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e39e26a-2f1b-4c76-8938-ab454b6f5a49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
