--- a/_notebooks/2021-05-11-superpixel.ipynb
+++ b/_notebooks/2021-05-11-superpixel.ipynb
@@ -13,7 +13,7 @@
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [image processing, unsupervised learning, from scratch]\n",
+    "- categories: [image processing, unsupervised learning, from scratch, computer-vision]\n",
     "- image: images/Covers/2021_05_11.png\n",
     "- hide: false\n",
     "- search_exclude: true\n",
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
