--- a/_notebooks/2021-07-16-feature-inversion.ipynb
+++ b/_notebooks/2021-07-16-feature-inversion.ipynb
@@ -7,7 +7,8 @@
     "id": "1009e6da"
    },
    "source": [
-    "- title: \"Feature inversion\"\n",
+    "# Feature inversion\n",
+    "\n",
     "- description: \"Feature visualization with PyTorch\"\n",
     "- toc: false\n",
     "- branch: master\n",
@@ -628,6 +629,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "fig, ax = plt.subplots(1,1,figsize=[10,10])\n",
     "\n",
     "# for sanity\n",
@@ -694,7 +696,7 @@
    "source": [
     "# Results\n",
     "\n",
-    "The algorithm can reconstruct an image pretty close to the original from shallow layers, but the inversion becomes more abstract with deeper layers. The color reconstruction also becomes increasingly unfaithful the deeper we go. For example, here are illustrations of the optimization process on layer 7 (upper), and 29, i.e. last layer (lower). Also, you can both output images are jittered, the jittering is only clearly visible for layer 7. \n",
+    "The algorithm can reconstruct an image pretty close to the original from shallow layers, but the inversion becomes more abstract with deeper layers. The color reconstruction also becomes increasingly unfaithful the deeper we go. For example, here are illustrations of the optimization process on layer 7 (top), and 29, i.e. last layer (bottom). Also, you can both output images are jittered, the jittering is only clearly visible for layer 7. \n",
     "![](https://github.com/abauville/blog/raw/master/images/2021_07_16_feature_inversion/layer_7.gif)\n",
     "![](https://github.com/abauville/blog/raw/master/images/2021_07_16_feature_inversion/layer_29.gif)\n",
     "<!-- <img src=\"https://github.com/abauville/blog/raw/master/images/2021_07_16_feature_inversion/layer_7.gif\" alt=\"Optimization layer 7\" width=\"360\"/>\n",
